test/files/neg/t7653.check
t7653.scala:2: error: percent signs not directly following splicees must be escaped
  f"%"()
    ^
one error found
